# Backoffice_arvoredo

./: .gitignore
oncomandas/: app.js  index.html  manifest.json  styles.css
sistema/: database.py  main.py  main_novo.py  pyproject.toml
sistema/ui/: __init__.py  componentes.py
sistema/ui/telas/: __init__.py  cadastro.py  clientes.py  editar.py  editar_produto.py  pedidos.py  vendas.py
